--- a/index.css
+++ b/index.css
@@ -1,25 +1,25 @@
 body
 {
     margin: 0px ;
-    padding: 0px 180px;
+    
 
 }
  .header
 {
 height: 80px;
-background-color: white;
+background-color: rgba(255, 255, 255, 0.95);
+
 
 }  
  .header-brand
 {
     display: flex;
     justify-content:space-between;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.95);
     height: 60px;
     width:calc(100% - 360px);
-    padding-top:15px ;
     position: fixed;
-    margin: auto;   
+    padding: 15px 180px 0px 180px;  
 }
 .logo
 {
@@ -102,6 +102,10 @@ background-color: white;
 {
     display: flex;
 } */
+.main
+{
+    padding: 0px 180px;
+}
 .healthcare-title
 {
     display: flex;
@@ -242,4 +246,203 @@ padding-left: 150px;
 {
     width: 20px;
     height: 20px;
+}
+.section-acheivement
+{
+
+    display: flex;
+    background-color:#DAF7F7;  
+    width:calc(100% + 360px);
+    margin: 0 -180px;
+    height: 600px;
+}
+
+.acheivement-stat
+{
+    display: flex;
+}
+.section-acheivement-platform
+{
+    width: 50%;
+}
+.section-acheivement-description
+{
+    padding-left: 180px;
+    padding-top: 90px;
+    padding-bottom: 30px;
+    
+}
+.section-acheivement-title
+{
+    color: #00b39b;
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-size: 35px;
+    font-weight: normal;
+
+}
+.section-acheivement-txt
+{
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    color: #747474;
+    font-size: 14px;
+    line-height:180%
+}
+.imglogo
+{
+    padding-left: 100px;
+    width: 300px;
+    height: 250px;
+}
+.acheivement-stat-cards
+{
+    width: 220px;
+
+}
+.acheivement-stat-offset
+{
+    
+    margin-top: 50px;
+    margin-right: 50px;
+}
+.acheivement-stat-outset
+{
+    margin-top: 25px;
+}
+.acheivement-stat-card
+{
+    width: 180px;
+    height: 190px;
+    border-radius: 5px;
+    padding: 30px 25px;
+    margin-bottom: 20px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.acheivement-stat-title
+{
+    color: #00b39b;
+    font-weight: normal;
+    text-align: center;
+
+}
+.acheivement-stat-txt
+{
+    color: #747474;
+    font-size: 15px;
+    font-weight: normal;
+    text-align: center;
+}
+.destination-descrption
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 80px 250px;
+}
+.destination-title
+{
+    color: #00b39b;
+    font-weight: normal;
+    font-size: 31px;
+    text-align: center; 
+}
+.destination-txt
+{
+    color: #747474;
+    font-size: 15px;
+    font-weight: normal;
+    text-align: center;
+    line-height: 170%;
+    margin-top: -5px;
+
+}
+.destination-cards
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: white;
+    
+}
+.destination-card
+{
+    margin-right: 15px;
+    margin-bottom: 18px;
+    background-color: white;
+    border: 0.49px solid silver;
+    border-radius: 5px ;
+
+}
+.destination-img
+{
+    border-radius: 5px 5px 0px 0px;
+}
+.destination-designation
+{
+    display: flex;
+    justify-content: space-around;
+    align-items: center
+}
+.destination-name
+{
+    color: #747474;
+   font-weight: 500;
+}
+.destination-btn
+{
+    height: 21px;
+    width: 110px;
+    border-radius: 3px;
+    color: white;
+    background-color: #3d83df;
+    font-size: 10px;
+    text-align: center;
+    font-weight: 900;
+    text-decoration-line: none;
+    text-transform: uppercase;
+    padding-top:8px ;
+    border: none;
+   font-weight: normal;
+}
+.destination-btn:hover
+{
+background-color: blue;
+}
+.destination-card:hover
+{
+    box-shadow: 0px 15px 15px 15px rgb(242, 241, 241);
+}
+.footer
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+}
+hr{
+    border: 0.5px solid silver;
+   width: 100%;
+}
+.footer-txt
+{
+    color: #747474;
+    font-size: 12px;
+    text-align: center;
+    line-height: 180%;
+}
+.footer-city
+{
+    text-decoration-line: none;
+  color: #3d83df;
+}
+.footer-city:hover
+{
+    text-decoration-line: underline;
+}
+.footer-city:visited
+{
+    color: #3d83df;
 }
